# yiyd

./: .gitignore  .gitlab-ci.yml  ChangeLog.md  LICENSE  README.md  shell.nix  stack.yaml  test.yml  todo.org  yiyd.cabal
docs/: 一爻.dot
src/: Arguments.hs  Main.hs
src/ZY/: Divination.hs
static/: 01.yml  02.yml  03.yml  04.yml  05.yml  06.yml  07.yml  08.yml  09.yml  10.yml  11.yml  12.yml  13.yml  14.yml  15.yml  16.yml  17.yml  18.yml  19.yml  20.yml  list.yml  readme.org  zy.yml
test/: Test.hs
test/ZY/: DivinationSpec.hs
