name:                yiyd
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/VonFry/yiyd
license:             GPL3
license-file:        LICENSE
author:              Vonfry
maintainer:          vonfry314@gmail.com
copyright:           2017 Vonfry
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable yiyd
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
