name:                yiyd
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/VonFry/yiyd
license:             GPL3
license-file:        LICENSE
author:              Vonfry
maintainer:          vonfry314@gmail.com
copyright:           2017 Vonfry
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

data-dir: static
data-files: zhouyi.md

executable yiyd
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       base >=4.7 && < 5
  ghc-options:         -Wall, -DDEBUG
