name:                yiyd
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://gitlab.com/Vonfry/yiyd
license:             GPL-3
license-file:        LICENSE
author:              Vonfry
maintainer:          mail@vonfry.name
copyright:           2019 Vonfry
category:            CLI
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

data-dir: static
data-files: zy.yml

executable yiyd
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  LambdaCase
                    ,  MultiWayIf
                    ,  OverloadedStrings
                    ,  OverloadedLists
                    ,  NamedFieldPuns
                    ,  RecordWildCards
  build-depends:       base >= 4.7 && < 5
                    ,  yaml
                    ,  optparse-applicative
                    ,  bytestring
                    ,  containers
                    ,  random
  other-modules:       ZY.Divination
                    ,  Paths_yiyd
                    ,  Arguments

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             Spec.hs
  default-extensions:  LambdaCase
                    ,  MultiWayIf
                    ,  OverloadedStrings
                    ,  OverloadedLists
                    ,  NamedFieldPuns
                    ,  RecordWildCards
  build-depends:       base >=4.7 && < 5
                    ,  optparse-applicative
                    ,  hspec
                    ,  yaml
                    ,  bytestring
                    ,  containers
                    ,  random
  other-modules:       ZY.Divination
                    ,  Paths_yiyd
                    ,  Arguments
  ghc-options:         -Wall, -DDEBUG
